--- a/lab-03.html
+++ b/lab-03.html
@@ -9,7 +9,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="User1, User2, User3 and Monica - Team Name" />
+<meta name="author" content="monica, User2, User3 and User4 - Team Name" />
 
 <meta name="date" content="2023-10-13" />
 
@@ -352,7 +352,7 @@ display: none;
 
 <h1 class="title toc-ignore">Lab 03 - Take a sad plot and make it
 better</h1>
-<h4 class="author">User1, User2, User3 and Monica - Team Name</h4>
+<h4 class="author">monica, User2, User3 and User4 - Team Name</h4>
 <h4 class="date">2023-10-13</h4>
 
 </div>
